--- a/mth.css
+++ b/mth.css
@@ -15,7 +15,7 @@ p{
 header{
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(to top, rgb(94, 30, 116), rgb(41, 54, 172), rgb(47, 116, 47));
+    background-image: linear-gradient(to top, rgb(3, 49, 7), rgb(9, 87, 22), rgb(47, 116, 47));
     color: white;
     min-height: 150px;
     box-shadow: 0px 1px 3px 3px rgb(29, 27, 27);
@@ -36,7 +36,7 @@ header p{
     padding: 10px;
 }
 nav a{
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 13px;
     text-decoration: none;
     margin: 0px 10px;
@@ -44,7 +44,7 @@ nav a{
 }
 nav a:hover{
     text-decoration: underline;
-    color: rgb(7, 53, 9);
+    color: rgb(172, 212, 174);
     background-color: rgb(11, 87, 11);
 }
 main a{
@@ -75,11 +75,10 @@ section article h1{
     font-size: 26px;
     text-align: left;
     border-radius: 5px;
-}
-section article h1{
     color: rgb(58, 51, 51);
     background-image: linear-gradient(to right, rgb(88, 199, 88), transparent);
 }
+
 .scontainer{
     background-color: rgb(127, 206, 127);
     border-radius: 10px;
